--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,8 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/tool_bar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        style="ThemeOverlay.AppCompat.Dark.ActionBar" />
+        android:layout_height="?attr/actionBarSize"
+        style="@style/ToolbarTheme"/>
 
     <FrameLayout
         android:id="@+id/fragment_container"
