added full functionality

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,8 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="main_screen_padding">56dp</dimen>
+    <dimen name="height_list_item">88dp</dimen>
+    <dimen name="padding_list_item">16dp</dimen>
+    <dimen name="text_size_primary_list_item">16sp</dimen>
+    <dimen name="text_size_secondary_list_item">14sp</dimen>
 </resources>
