--- a/app/src/main/res/layout-v14/fragment_app_list.xml
+++ b/app/src/main/res/layout-v14/fragment_app_list.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="me.gumenniy.arkadiy.appobserver.fragments.AppListFragment">
 
     <ListView
@@ -9,10 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <ProgressBar
+    <com.github.rahatarmanahmed.cpv.CircularProgressView
         android:id="@+id/progress_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:cpv_animAutostart="true"
+        app:cpv_indeterminate="true"
         android:layout_gravity="center" />
 
 </FrameLayout>
