--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,9 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/height_list_item"
+    android:orientation="vertical"
+    android:padding="@dimen/padding_list_item">
+
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/main_text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/text_size_primary_list_item"
+        android:textColor="?android:attr/textColorPrimary"
+        android:lines="2"
+        android:maxLines="2"/>
+
+    <TextView
+        android:id="@+id/sub_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/text_size_secondary_list_item"
+        android:textColor="?android:attr/textColorSecondary" />
 </LinearLayout>
