--- a/app/src/main/res/layout/fragment_app_list.xml
+++ b/app/src/main/res/layout/fragment_app_list.xml
@@ -1,13 +1,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="me.gumenniy.arkadiy.appobserver.fragments.AppListFragment">
+    android:layout_height="match_parent" >
 
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        style="@style/ListViewTheme"/>
 
     <ProgressBar
         android:id="@+id/progress_bar"
