--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,23 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/height_list_item"
-    android:orientation="vertical"
-    android:padding="@dimen/padding_list_item">
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/main_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/text_size_primary_list_item"
-        android:textColor="?android:attr/textColorPrimary"
-        android:lines="2"
-        android:maxLines="2"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/height_list_item"
+        android:orientation="vertical"
+        android:gravity="center_vertical"
+        android:paddingLeft="@dimen/padding_list_item"
+        android:paddingStart="@dimen/padding_list_item"
+        android:paddingRight="@dimen/padding_list_item"
+        android:paddingEnd="@dimen/padding_list_item" >
 
-    <TextView
-        android:id="@+id/sub_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/text_size_secondary_list_item"
-        android:textColor="?android:attr/textColorSecondary" />
-</LinearLayout>
+        <TextView
+            android:id="@+id/main_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:lines="2"
+            android:maxLines="2"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="@dimen/text_size_primary_list_item" />
+
+        <TextView
+            android:id="@+id/sub_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="?android:attr/textColorSecondary"
+            android:textSize="@dimen/text_size_secondary_list_item" />
+    </LinearLayout>
+</android.support.v7.widget.CardView>
