--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -24,14 +24,17 @@
             android:orientation="vertical"
             android:gravity="center_vertical"
             android:layout_marginLeft="@dimen/padding_list_item"
-            android:layout_marginStart="@dimen/padding_list_item">
+            android:layout_marginStart="@dimen/padding_list_item"
+            android:layout_marginRight="@dimen/padding_list_item"
+            android:layout_marginEnd="@dimen/padding_list_item">
 
             <TextView
                 android:id="@+id/label_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="?android:attr/textColorPrimary"
-                android:textSize="@dimen/text_size_primary_list_item" />
+                android:textSize="@dimen/text_size_primary_list_item"
+                android:maxLines="1"/>
 
             <TextView
                 android:id="@+id/package_name_text"
