--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,55 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="@dimen/height_list_item"
+    android:gravity="center_vertical"
+    android:orientation="horizontal">
 
+    <me.gumenniy.arkadiy.appobserver.views.SquareImageView
+        android:id="@+id/app_icon_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/padding_list_item"
+        app:direction="height" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/height_list_item"
+        android:layout_height="match_parent"
+        android:layout_marginEnd="@dimen/padding_list_item"
+        android:layout_marginLeft="@dimen/padding_list_item"
+        android:layout_marginRight="@dimen/padding_list_item"
+        android:layout_marginStart="@dimen/padding_list_item"
         android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <me.gumenniy.arkadiy.appobserver.views.SquareImageView
-            android:id="@+id/app_icon_view"
+        <TextView
+            android:id="@+id/label_text"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_margin="@dimen/padding_list_item"
-            app:direction="height" />
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="@dimen/text_size_primary_list_item" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center_vertical"
-            android:layout_marginLeft="@dimen/padding_list_item"
-            android:layout_marginStart="@dimen/padding_list_item"
-            android:layout_marginRight="@dimen/padding_list_item"
-            android:layout_marginEnd="@dimen/padding_list_item">
+        <TextView
+            android:id="@+id/package_name_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="@dimen/text_size_small" />
 
-            <TextView
-                android:id="@+id/label_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="?android:attr/textColorPrimary"
-                android:textSize="@dimen/text_size_primary_list_item"
-                android:maxLines="1"/>
-
-            <TextView
-                android:id="@+id/package_name_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="?android:attr/textColorPrimary"
-                android:textSize="@dimen/text_size_small"
-                android:maxLines="1" />
-
-            <TextView
-                android:id="@+id/sub_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="?android:attr/textColorSecondary"
-                android:textSize="@dimen/text_size_secondary_list_item" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/sub_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="?android:attr/textColorSecondary"
+            android:textSize="@dimen/text_size_secondary_list_item" />
     </LinearLayout>
-</android.support.v7.widget.CardView>
+</LinearLayout>
